syntax = "proto3";

package service;

service DeviceStateService {
    rpc GetDeviceState(DeviceStateRequest) returns (DeviceStateResponse) {}
}

message DeviceStateRequest {
    string device_id = 1;
}

message DeviceStateResponse {
    string state = 1;
    int64 timestamp  = 2;
}